--- a/article.html
+++ b/article.html
@@ -28,7 +28,7 @@
                 <a href="blog.html" id="nav-button">Go To Blog</a>
             </li>
         </ul>
-        <div class="progress" id="progress"></div>
+        <div id="scroll-progress-indicator" class="scroll-progress-indicator"></div>
 
     </nav>
 
@@ -93,7 +93,7 @@
 
     <footer></footer>
 
-    <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+
 
 </body>
 
