Trying to make responsive

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div id="wrapper">
         <nav>
             <!-- <img src="./HatchfulExport-All/final_logo_transparent.png" alt="" class="logo"> -->
-            <p class="logo">Ronchez <span>Fitness</span>.</p>
+            <a href="/" class="logo">Ronchez <span>Fitness</span>.</a>
             <ul class="pages">
                 <li><a href="https://web.facebook.com/Ronchezfitness"><i class="fa fa-facebook-square"></i></a></li>
                 <li><a class="orange" href="https://twitter.com/ronchezfitness?s=08"><i class="fa fa-twitter"></i></a></li>
@@ -29,6 +29,29 @@
                     <a href="blog.html" id="nav-button">Go To Blog</a>
                 </li>
             </ul>
+            <div class="mobile-menu">
+                <input type="checkbox" />
+                <span></span>
+                <span></span>
+                <span></span>
+                <ul class="mobile-account">
+                    <li><a href="blog.html">Blogs</a></li>
+                    <li>Cart</li>
+                    <li id="log-in">Log In</li>
+                    <li id="buttone">
+                        <a href="blog.html" id="nav-buttone">Go To Blog</a>
+                    </li>
+
+                    <li><a href="https://web.facebook.com/Ronchezfitness"><i class="fa fa-facebook-square"></i> Facebook</a></li>
+                    <li><a class="orange" href="https://twitter.com/ronchezfitness?s=08"><i class="fa fa-twitter"></i> Twitter</a></li>
+                    <li><a href="https://youtube.com/channel/UCm2YuAW5Hvd57bv503tFmaQ"><i class="fa fa-youtube-play"></i> Youtube</a></li>
+                    <li><a class="orange" href="https://ronchezfitness.com/"><i class="fa fa-instagram"></i> Instagram</a></li>
+
+                </ul>
+
+            </div>
+            <div id="scroll-progress-indicator" class="scroll-progress-indicator"></div>
+
         </nav>
         <div class="back">
             <p></p>
