--- a/article.html
+++ b/article.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="article.css">
     <link rel="stylesheet" href="nav.css">
+    <script src="https://use.fontawesome.com/07b0ffd8fa.js"></script>
     <script src="article.js"></script>
     <title>Article of Blog</title>
 </head>
@@ -28,6 +29,27 @@
                 <a href="blog.html" id="nav-button">Go To Blog</a>
             </li>
         </ul>
+        <div class="mobile-menu">
+            <input type="checkbox" />
+            <span></span>
+            <span></span>
+            <span></span>
+            <ul class="mobile-account">
+                <li><a href="blog.html">Blogs</a></li>
+                <li>Cart</li>
+                <li id="log-in">Log In</li>
+                <li id="buttone">
+                    <a href="blog.html" id="nav-buttone">Go To Blog</a>
+                </li>
+
+                <li><a href="https://web.facebook.com/Ronchezfitness"><i class="fa fa-facebook-square"></i> Facebook</a></li>
+                <li><a class="orange" href="https://twitter.com/ronchezfitness?s=08"><i class="fa fa-twitter"></i> Twitter</a></li>
+                <li><a href="https://youtube.com/channel/UCm2YuAW5Hvd57bv503tFmaQ"><i class="fa fa-youtube-play"></i> Youtube</a></li>
+                <li><a class="orange" href="https://ronchezfitness.com/"><i class="fa fa-instagram"></i> Instagram</a></li>
+
+            </ul>
+
+        </div>
         <div id="scroll-progress-indicator" class="scroll-progress-indicator"></div>
 
     </nav>
