--- a/blog.html
+++ b/blog.html
@@ -28,6 +28,29 @@
                 <a href="blog.html" id="nav-button">Go To Blog</a>
             </li>
         </ul>
+        <div class="mobile-menu">
+            <input type="checkbox" />
+            <span></span>
+            <span></span>
+            <span></span>
+            <ul class="mobile-account">
+                <li><a href="blog.html">Blogs</a></li>
+                <li>Cart</li>
+                <li id="log-in">Log In</li>
+                <li id="buttone">
+                    <a href="blog.html" id="nav-buttone">Go To Blog</a>
+                </li>
+
+                <li><a href="https://web.facebook.com/Ronchezfitness"><i class="fa fa-facebook-square"></i> Facebook</a></li>
+                <li><a class="orange" href="https://twitter.com/ronchezfitness?s=08"><i class="fa fa-twitter"></i> Twitter</a></li>
+                <li><a href="https://youtube.com/channel/UCm2YuAW5Hvd57bv503tFmaQ"><i class="fa fa-youtube-play"></i> Youtube</a></li>
+                <li><a class="orange" href="https://ronchezfitness.com/"><i class="fa fa-instagram"></i> Instagram</a></li>
+
+            </ul>
+
+        </div>
+        <div id="scroll-progress-indicator" class="scroll-progress-indicator"></div>
+
     </nav>
 
     <header>
@@ -68,7 +91,7 @@
                         </div>
                         <p class="title">Forging your path</p>
                         <p class="content">Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Sed ut perspiciatis unde omnis iste natus error...
-                            <span class="continue-reading">Continue Reading</span></p>
+                            <a href="article.html"><span class="continue-reading"> Continue Reading</span></p></a>
                     </div>
                 </div>
 
@@ -83,7 +106,7 @@
                         </div>
                         <p class="title">Forging your path</p>
                         <p class="content">Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Sed ut perspiciatis unde omnis iste natus error...
-                            <span class="continue-reading">  Continue Reading</span></p>
+                            <a href="article.html"><span class="continue-reading"> Continue Reading</span></p></a>
                     </div>
                 </div>
 
@@ -105,7 +128,18 @@
                 </div>
             </aside>
         </main>
-        <footer></footer>
+        <footer>
+            <div class="footer-text">
+                <h3> <a href="index.html" class="logo">Ronchez <span>Fitness</span>.</a></h3>
+                <div class="inner-footer-text">
+                    <p>Instagram</p>
+                    <p>Facebook</p>
+                    <p>Email</p>
+                    <p>Location</p>
+                    <p>Ronchez Fitness.</p>
+                </div>
+            </div>
+        </footer>
     </div>
 </body>
 
