Mobile menu and home page

--- a/blog.html
+++ b/blog.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="nav.css">
     <script src="https://use.fontawesome.com/07b0ffd8fa.js"></script>
     <script src="blog.js"></script>
+    <script src="nav.js"></script>
     <title>Ronchez Fitness</title>
 </head>
 
