Mobile view blog page

--- a/blog.html
+++ b/blog.html
@@ -54,46 +54,77 @@
 
                 <div class="card">
                     <div class="card-image">
-                        <img src="https://images.unsplash.com/photo-1585152968992-851c3a8e1678?ixid=MXwxMjA3fDB8MHxzZWFyY2h8NDl8fGd5bSUyMHBvdHJhaXR8ZW58MHx8MHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60" alt="" class="thumbnail">
+                        <img src="https://res.cloudinary.com/dgtmiq7wq/image/upload/v1614622957/ronchezFitness/Elusive_2_bjvtw6.png" alt="" class="thumbnail">
                     </div>
                     <div class="card-text">
                         <div class="meta">
                             <p class="category">Ronchez</p>
                             <p class="date">Says:</p>
                         </div>
-                        <p class="title">Forging your path</p>
+                        <p class="title">The Ronchez Belly Series (part·1) > A Nasty Inconvenience </p>
                         <p class="content">Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Sed ut perspiciatis unde omnis iste natus error …
-                            <a href="article.html"><span class="continue-reading"> Continue Reading</span></p></a>
+                            <a href="article.html"><span class="continue-reading"> Continue Reading <i class="fa fa-long-arrow-right"></i> </span></p></a>
                     </div>
                 </div>
 
                 <div class="card">
                     <div class="card-image">
-                        <img src="https://images.unsplash.com/photo-1585152968992-851c3a8e1678?ixid=MXwxMjA3fDB8MHxzZWFyY2h8NDl8fGd5bSUyMHBvdHJhaXR8ZW58MHx8MHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60" alt="" class="thumbnail">
+                        <img src="https://res.cloudinary.com/dgtmiq7wq/image/upload/v1612728553/ronchezFitness/fat_tsgp2r.jpg" alt="" class="thumbnail">
                     </div>
                     <div class="card-text">
                         <div class="meta">
                             <p class="category">Ronchez</p>
                             <p class="date">Says:</p>
                         </div>
-                        <p class="title">Forging your path</p>
+                        <p class="title">The Ronchez Belly Series (part·2) > The Elusive strong core</p>
                         <p class="content">Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Sed ut perspiciatis unde omnis iste natus error...
-                            <a href="article.html"><span class="continue-reading"> Continue Reading</span></p></a>
+                            <a href="article.html"><span class="continue-reading"> Continue Reading <i class="fa fa-long-arrow-right"></i> </span></p></a>
                     </div>
                 </div>
 
                 <div class="card">
                     <div class="card-image">
-                        <img src="https://images.unsplash.com/photo-1585152968992-851c3a8e1678?ixid=MXwxMjA3fDB8MHxzZWFyY2h8NDl8fGd5bSUyMHBvdHJhaXR8ZW58MHx8MHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60" alt="" class="thumbnail">
+                        <img src="https://res.cloudinary.com/dgtmiq7wq/image/upload/v1611185041/ronchezFitness/Screenshot_20210120-222914_2_rt6ow5.png" alt="" class="thumbnail">
                     </div>
                     <div class="card-text">
                         <div class="meta">
                             <p class="category">Ronchez</p>
                             <p class="date">Says:</p>
                         </div>
-                        <p class="title">Forging your path</p>
+                        <p class="title">5 Tips to working out stronger 💪 > The Ronchez Way</p>
                         <p class="content">Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Sed ut perspiciatis unde omnis iste natus error...
-                            <a href="article.html"><span class="continue-reading"> Continue Reading</span></p></a>
+                            <a href="article.html"><span class="continue-reading"> Continue Reading <i class="fa fa-long-arrow-right"></i> </span></p></a>
+                    </div>
+                </div>
+
+                <div class="card">
+                    <div class="card-image">
+                        <img src="https://res.cloudinary.com/dgtmiq7wq/image/upload/v1609741459/ronchezFitness/Screenshot_20210102-104457_2_o39i0t.png" alt="" class="thumbnail">
+                    </div>
+                    <div class="card-text">
+                        <div class="meta">
+                            <p class="category">Ronchez</p>
+                            <p class="date">Says:</p>
+                        </div>
+                        <p class="title">8 Things to know before returning/joining the Gym</p>
+                        <p class="content">Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Sed ut perspiciatis unde omnis iste natus error...
+                            <a href="article.html"><span class="continue-reading"> Continue Reading <i class="fa fa-long-arrow-right"></i> </span></p></a>
+                    </div>
+                </div>
+
+
+                <div class="card">
+                    <div class="card-image">
+                        <img src="https://res.cloudinary.com/dgtmiq7wq/image/upload/v1609758978/ronchezFitness/blog0_ij89al.png" alt="" class="thumbnail">
+                    </div>
+                    <div class="card-text">
+                        <div class="meta">
+                            <p class="category">Ronchez</p>
+                            <p class="date">Says:</p>
+                        </div>
+                        <p class="title">Hello 2021!!</p>
+                        <p class="content">Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Sed ut perspiciatis unde omnis iste natus error...
+                            <a href="article.html"><span class="continue-reading"> Continue Reading <i class="fa fa-long-arrow-right"></i> </span></p></a>
                     </div>
                 </div>
 
@@ -125,6 +156,13 @@
                     <p>Location</p>
                     <p>Ronchez Fitness.</p>
                 </div>
+                <ul class="inner-footer-text-icons">
+                    <li><a class="pages orange" href="https://web.facebook.com/Ronchezfitness"><i class="fa fa-facebook-square"></i></a></li>
+                    <li><a class="pages" id="twitter" href="https://twitter.com/ronchezfitness?s=08"><i class="fa fa-twitter"></i></a></li>
+                    <li><a class="pages orange" id="youtube" href="https://youtube.com/channel/UCm2YuAW5Hvd57bv503tFmaQ"><i class="fa fa-youtube-play"></i></a></li>
+                    <li><a class="pages" id="instagram" href="https://ronchezfitness.com/"><i class="fa fa-instagram"></i></a></li>
+                </ul>
+                <!-- <p>0712345678</p> -->
             </div>
         </footer>
     </div>
