Article page - 30% done

--- a/article.html
+++ b/article.html
@@ -40,13 +40,22 @@
             <div class="line3"></div>
         </div>
     </nav>
-
+    <div class="scroll-progress-indicator"></div>
+    <div class="text">
+        <h1> The Elusive Strong Core: The Belly Series (Part·2)
+        </h1>
+    </div>
+    <div class="comment">
+        <div id="comment-height">
+            <img src="./IMAGES/RONCHEZ-PROFILE.jpg" alt="" id="profile-pic">
+            <p id="comment-name">Mr Ronchez</p>
+        </div>
+    </div>
     <header>
         <!-- <img src="https://images.unsplash.com/photo-1605296867304-46d5465a13f1?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1050&q=80" alt="" id="header-image"> -->
-        <div class="text">
-            <p> The Biceps of knowledge</p>
-        </div>
     </header>
+
+
     <div class="blog-wrapper">
         <p class="article-content">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est, dicta? Earum error aliquam quis. Quas, cupiditate a tempora cum consequuntur vel eveniet possimus expedita. Adipisci, veritatis ullam! Omnis, id tenetur.</p>
         <p class="article-content">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est, dicta? Earum error aliquam quis. Quas, cupiditate a tempora cum consequuntur vel eveniet possimus expedita. Adipisci, veritatis ullam! Omnis, id tenetur.</p>
@@ -67,40 +76,60 @@
         <p class="article-content">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est, dicta? Earum error aliquam quis. Quas, cupiditate a tempora cum consequuntur vel eveniet possimus expedita. Adipisci, veritatis ullam! Omnis, id tenetur.</p>
         <p class="article-content">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est, dicta? Earum error aliquam quis. Quas, cupiditate a tempora cum consequuntur vel eveniet possimus expedita. Adipisci, veritatis ullam! Omnis, id tenetur.</p>
     </div>
-
+    <br>
+    <hr>
+    <br>
     <div class="comments">
-        <p id="comment-title">Comments</p>
+        <p id="comment-title">Comments.</p><br>
         <div class="comment">
             <div id="comment-height">
                 <img src="./IMAGES/RONCHEZ-PROFILE.jpg" alt="" id="profile-pic">
                 <p id="comment-name">MacheeseMoh</p>
             </div>
-            <p id="the-comment">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsam excepturi unde tenetur impedit corporis officia libero perspiciatis minima cupiditate. Aut quidem aspernatur inventore sunt delectus quaerat minima, provident veritatis modi?</p>
+            <p id="the-comment">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsam excepturi unde tenetur impedit corporis officia libero perspiciatis minima cupiditate.</p>
         </div>
         <div class="comment">
             <div id="comment-height">
-                <img src="./IMAGES/RONCHEZ-PROFILE.jpg" alt="" id="profile-pic">
-                <p id="comment-name">MacheeseMoh</p>
+                <img src="https://images.unsplash.com/photo-1438761681033-6461ffad8d80?ixid=MXwxMjA3fDB8MHxzZWFyY2h8MXx8cGVyc29ufGVufDB8fDB8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1500&q=60" alt="" id="profile-pic">
+                <p id="comment-name">Jake Simpson</p>
+            </div>
+            <p id="the-comment">Ipsam excepturi unde tenetur impedit corporis officia libero perspiciatis minima cupiditate. Aut quidem aspernatur inventore sunt delectus quaerat minima, provident veritatis modi?</p>
+        </div>
+        <div class="comment">
+            <div id="comment-height">
+                <img src="https://images.unsplash.com/photo-1542103749-8ef59b94f47e?ixid=MXwxMjA3fDB8MHxzZWFyY2h8Mnx8cGVyc29ufGVufDB8fDB8&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60" alt="" id="profile-pic">
+                <p id="comment-name">Marie Antoinette</p>
             </div>
             <p id="the-comment">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsam excepturi unde tenetur impedit corporis officia libero perspiciatis minima cupiditate. Aut quidem aspernatur inventore sunt delectus quaerat minima, provident veritatis modi?</p>
         </div>
         <div class="comment">
             <div id="comment-height">
-                <img src="./IMAGES/RONCHEZ-PROFILE.jpg" alt="" id="profile-pic">
-                <p id="comment-name">MacheeseMoh</p>
-            </div>
-            <p id="the-comment">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsam excepturi unde tenetur impedit corporis officia libero perspiciatis minima cupiditate. Aut quidem aspernatur inventore sunt delectus quaerat minima, provident veritatis modi?</p>
-        </div>
-        <div class="comment">
-            <div id="comment-height">
-                <img src="./IMAGES/RONCHEZ-PROFILE.jpg" alt="" id="profile-pic">
-                <p id="comment-name">MacheeseMoh</p>
+                <img src="https://images.unsplash.com/flagged/photo-1570612861542-284f4c12e75f?ixid=MXwxMjA3fDB8MHxzZWFyY2h8M3x8cGVyc29ufGVufDB8fDB8&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60" alt="" id="profile-pic">
+                <p id="comment-name">The Mayn</p>
             </div>
             <p id="the-comment">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsam excepturi unde tenetur impedit corporis officia libero perspiciatis minima cupiditate. Aut quidem aspernatur inventore sunt delectus quaerat minima, provident veritatis modi?</p>
         </div>
     </div>
 
-    <footer></footer>
+    <footer>
+        <div class="footer-text">
+            <h3> <a href="index.html" class="logo">Ronchez <span>Fitness</span>.</a></h3>
+            <div class="inner-footer-text">
+                <p>Instagram</p>
+                <p>Facebook</p>
+                <p>Email</p>
+                <p>Location</p>
+                <p>Ronchez Fitness.</p>
+            </div>
+            <ul class="inner-footer-text-icons">
+                <li><a class="pages orange" href="https://web.facebook.com/Ronchezfitness"><i class="fa fa-facebook-square"></i></a></li>
+                <li><a class="pages" id="twitter" href="https://twitter.com/ronchezfitness?s=08"><i class="fa fa-twitter"></i></a></li>
+                <li><a class="pages orange" id="youtube" href="https://youtube.com/channel/UCm2YuAW5Hvd57bv503tFmaQ"><i class="fa fa-youtube-play"></i></a></li>
+                <li><a class="pages" id="instagram" href="https://ronchezfitness.com/"><i class="fa fa-instagram"></i></a></li>
+            </ul>
+            <!-- <p>0712345678</p> -->
+        </div>
+    </footer>
 
 
     <script src="nav.js"></script>
