--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                     <li><a class="nav-text" href="">Cart</a></li>
                     <li><a class="nav-text" href="">Log In</a></li>
                     <li id="nav-button">
-                        <a class="nav-text" href="blog.html" id="go-to-blog">Go To Blog</a>
+                        <a class="nav-text" href="shop.html" id="go-to-blog">Go To Shop</a>
                     </li>
                 </ul>
             </div>
